font size fix on mobile

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ p{
 .password-display{
   background-color: #f5f5f7;
   border-radius: 900px;
-  font-size: 15px;
+  font-size: 12px;
   display: flex;
   align-items: center;
   justify-content: center;
